# k8s_cluster_crawler

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  crawl_cluster.sh  pyproject.toml
.github/workflows/: cluster-crawler.yml
scripts/: cluster_crawler.sh  crawl_clusters.sh  generate_ingress_reports.py  md_generator.py  parser.py
scripts/docs/: cluster_crawler.sh  cluster_map.yaml  name_id.map
scripts/ergebnisse/: ftctl-pf01_ingress.md  ftctl-pf01_pods.md  ftctl-ps01_ingress.md  ftctl-ps01_pods.md  fttc-demo1_ingress.md  fttc-demo1_pods.md  fttc-pdf01_ingress.md  fttc-pdf01_pods.md  fttc-pds01_ingress.md  fttc-pds01_pods.md  fttc-pf01_ingress.md  fttc-pf01_pods.md  fttc-ps01_ingress.md  fttc-ps01_pods.md  fttc-tdf01_ingress.md  fttc-tdf01_pods.md  fttc-tds01_ingress.md  fttc-tds01_pods.md  fttc-tf01_ingress.md  fttc-tf01_pods.md  fttc-tn01_ingress.md  fttc-tn01_pods.md  fttc-ts01_ingress.md  fttc-ts01_pods.md  yt24-edu_ingress.md  yt24-edu_pods.md
