[tool.poetry]
name = "k8s-cluster-crawler"
version = "0.1.0"
description = "A tool to collect and report data from multiple Kubernetes clusters"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3 